@@ -1,3 +1,15 @@
+2004-01-21  Theodore A. Roth  <troth@openavr.org>
+[Contributed by Bjoern Haase <bjoern.m.haase@web.de>]
+
+	* configure.ac (AC_INIT): Bump version.
+	* src/ioreg.cc: Fix spelling error.
+	Add cvs Id keyword.
+	(atmega169_io_registers): Define.
+	* src/ioreg.h: Fix spelling error.
+	Add cvs Id keyword.
+	(atmega169_io_registers): Declare.
+	* src/jtagio.cc (deviceDefinitions): Install mega169 io register defs.
+
 2003-12-12  Theodore A. Roth  <troth@openavr.org>
 
 	* Release version 2.2.
